# sona-test-1

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  admin_app.py  config.json  config.py  data_processor.py  draft1_gui1.py  draft2.py  draft2_1.py  meeting-schedular.drawio  prompts.py  requirements.txt  secret.py  send_mail.py  setup.py  user_app.py  vector_store.py
.github/workflows/: cicd.yml  cicd_docker.yml  propagate-issue.yml
.streamlit/: secrets.toml
Caze_bizcon_ai/: ver0.2.1.py
Streamlit + OpenAI Implementation/: requirements.txt  ver0.1.1.py  ver0.2.0.py  ver0.2.1.py
api/: README.md  swagger.yaml
apps/pages/: report.py  (+2 more)
core/: data_processor.py  llm.py  prompts.py  speech.py  vector_store.py
electron/: main.js  package-lock.json  package.json
license/: License
pkg/: README.md
pkg/backend/: README.md  app.py  app.spec  caze-bizcon-setup-script.iss  config.py  convert_icon.py  logging_utils.py  pyproject.toml  requirements.txt
pkg/backend/core/: admin.py  chat_logic.py  chat_manager.py  chat_prompts.py  company.py  company_info_manager.py  files.py  leads.py  report.py  report_manager.py  settings.py  storage.py  user.py  user_chat.py  utils.py  vector_store.py
pkg/backend/core/agents/: availability.py  email.py  google_auth.py  meeting_scheduler.py  product_extractor.py  responsible_person.py
pkg/backend/src/caze_bizcon_ai/: __init__.py
test/: README.md
utils/: README.md  speech_utils.py
v0.2.1/: clients.py  config.py  data_processor.py  main.py  prompts.py  vector_store.py
v0.2.2/: config.py  main.py  prompts.py  ui_components.py
v0.2.4(WIP)/: admin_app.py  config.py  user_app.py  workspace.py
v0.3.0/: admin_app.py  clients.py  config.py  data_processor.py  test.ipynb  user_app.py  vector_store.py
v0.3.1/: admin_app.py  clients.py  config.json  config.py  data_processor.py  prompts.py  test.ipynb  user_app.py
(+92 files in other folders)
